# AutoDriver

./: README.md
.github/workflows/: ci_humble.yml
auto_driver_bringup/: CMakeLists.txt  README.md  package.xml
auto_driver_bringup/launch/: auto2024.launch.py
auto_driver_description/: CMakeLists.txt  package.xml
auto_driver_description/controllers/: controllers.yaml
auto_driver_description/launch/: auto_driver.launch.py  auto_driver.rviz
auto_driver_description/meshes/: gimbal_yaw_link.stl
auto_driver_description/urdf/: auto_driver.ros2_control.xacro  auto_driver.urdf.xacro  auto_driver.xacro
auto_driver_hardware/: CMakeLists.txt  auto_driver_hardware.xml  package.xml
auto_driver_hardware/include/auto_driver_hardware/: auto_driver_hardware.hpp
auto_driver_hardware/src/: auto_driver_hardware.cpp
auto_driver_interface/: CMakeLists.txt  package.xml
auto_driver_interface/include/auto_driver_interface/: move_to_target_deg_server.hpp  pid.hpp  tf_to_position_server.hpp
auto_driver_interface/launch/: examle.launch.py
auto_driver_interface/src/: hammer_node.cpp  move_to_target_deg_server.cpp  pid.hpp  pid_node.cpp  roller_node.cpp  tf_to_position_server.cpp
auto_driver_msgs/: CMakeLists.txt  package.xml
auto_driver_msgs/action/: GetAnglesFromTf.action  MoveToTargetDeg.action
